Correção dos testes